@@ -2,8 +2,10 @@
 
  	* support/regression/tests/and_survive.c:
 	  Test non-destructive and, regression test for #3534833.
+	* support/regression/tests/gcc-torture-execute-980707-1.c:
+	  Adapted and enabled test for mcs51.
 
-2012-06-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+2012-06-14 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/hc08/gen.c:
 	  Fix cost calculation for branches.
